# miller-dev-challenge

./: .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  init_db.sql  nginx.docker.conf  pyproject.toml
app/: main.py
app/api/: __init__.py  auth.py  car.py  share_request.py  status.py
app/db/: db.py  session.py
app/model/: car.py  share_request.py  user.py
app/repo/: car.py  share_request.py  user.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  Context.tsx  index.css
frontend/src/components/: CarItem.tsx  Footer.tsx  Header.tsx  Home.tsx  Login.tsx  ProtectedRoute.tsx  Signup.tsx
frontend/src/lib/: requests.ts
scripts/: run.sh
tests/: conftest.py
tests/api/: test_auth.py  test_status.py
tests/repo/: test_car.py  test_user.py
